[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Scene Control.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "fade"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 416 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 416 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 448, 16 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 448, 16 )

[node name="Scene Changer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Black" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 1 )

[node name="Left" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="Left"]
position = Vector2( 16, 544 )
shape = SubResource( 2 )

[node name="Right" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="Right"]
position = Vector2( 1904, 544 )
shape = SubResource( 3 )

[node name="Top" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="Top"]
position = Vector2( 960, 16 )
shape = SubResource( 4 )

[node name="Bottom" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="Bottom"]
position = Vector2( 960, 1056 )
shape = SubResource( 5 )
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="body_entered" from="Top" to="." method="_on_Top_body_entered"]
[connection signal="body_entered" from="Bottom" to="." method="_on_Bottom_body_entered"]
